--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
+      - name: Install Playwright browsers
+        run: pnpm exec playwright install
+
       - name: Install dependencies
         run: pnpm install
 
