--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Wait for dwn-server to be ready
         run: until curl -sf http://localhost:3000/health; do echo -n .; sleep .1; done
       - name: Install Playwright browsers
-        run: pnpm exec playwright install
+        run: pnpm playwright install --with-deps
 
       - name: Run tests
         run: pnpm test
