--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@web5/api": "0.8.1",
     "font-awesome": "^4.7.0",
+    "googleapis": "^128.0.0",
     "moment": "^2.29.4",
     "node-fetch": "^3.3.2",
-    "react-big-calendar": "^1.8.5",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7",
     "react-slick": "^0.29.0",
