--- a/examples/tutorials/dinger-completed/package.json
+++ b/examples/tutorials/dinger-completed/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web5/api": "0.8.2-alpha-20231109-019e92e",
+    "@web5/api": "0.8.2",
     "crypto-browserify": "3.12.0",
     "next": "13.5.4",
     "process": "^0.11.10",
