--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^1.0.6",
-    "@web5/api": "0.8.2-alpha-20231109-019e92e"
+    "@web5/api": "0.8.2"
   },
   "type": "module"
 }
