@web5/api v0.8.2 release prep (#960)
* Upgrade @web5/api version to v0.8.2-alpha

* added filter to records.read()

* fixing tests

* noting issue number for send() failures

* created code snippets and tests for Delete from DWN guide

* improved deleteRecordFromDid test

* created Code Snippets and tests for Make Records Public guide

* Added code snippets and tests for Write to DWN guide

* Update shared todo app

* Fix quickstart page - no SSR Web5 (#968)

* Triggers CI on every PR against main

* Attempt to fix send.test with local DWN

* Add local dwn v0.2.4

* fix records tests

* cleanup issue 259 failure comments

* Update book-reviews.js

added `filter` to `read()` in book review app

* update to 0.8.2-alpha-20231109-019e92e

* updating next config to handle node crypto errors (#973)

Co-authored-by: Rizel Scarlett <rizel@BLKVKH3C6VTXY.local>

* Update to final release v0.8.2

* updating records.read() API ref to include filter

---------

Co-authored-by: angiejones <jones.angie@gmail.com>
Co-authored-by: Adewale Abati <acekyd01@gmail.com>
Co-authored-by: Rizel Scarlett <rizel@tbd.email>
Co-authored-by: Rizel Scarlett <rizel@BLKVKH3C6VTXY.local>

--- a/examples/tutorials/dinger-completed/package.json
+++ b/examples/tutorials/dinger-completed/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web5/api": "0.8.1",
+    "@web5/api": "0.8.2",
+    "crypto-browserify": "3.12.0",
     "next": "13.5.4",
+    "process": "^0.11.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stream-browserify": "3.0.0"
   }
 }
