--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "node extract-snippets && pnpm --filter site run build",
     "clear": "pnpm --filter site run clear",
-    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts",
-    "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch"
+    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts && pnpm test:browser",
+    "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch",
+    "test:browser": "pnpm -r test:browser"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
@@ -22,8 +23,6 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@web5/api": "0.8.2",
     "font-awesome": "^4.7.0",
-    "googleapis": "^128.0.0",
-    "moment": "^2.29.4",
     "node-fetch": "^3.3.2",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7",
@@ -34,6 +33,8 @@
     "@vitest/browser": "0.33.0",
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
+    "playwright": "^1.39.0",
+    "start-server-and-test": "^2.0.2",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
