--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 5176",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "playwright test",
+    "test:browser": "start-server-and-test dev http://localhost:5176 test"
   },
   "devDependencies": {
     "@nuxt/test-utils": "^3.6.5",
