--- a/package.json
+++ b/package.json
@@ -33,8 +33,11 @@
     "@vitest/browser": "0.33.0",
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
+    "node-stdlib-browser": "^1.2.0",
     "playwright": "^1.39.0",
     "start-server-and-test": "^2.0.2",
+    "vite-plugin-commonjs": "^0.10.1",
+    "vite-plugin-node-stdlib-browser": "^0.2.1",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
