--- a/apps/feedback-server/package.json
+++ b/apps/feedback-server/package.json
@@ -11,18 +11,18 @@
     "test": "vitest"
   },
   "dependencies": {
-    "cookie-parser": "^1.4.6",
-    "cors": "^2.8.5",
-    "csrf-csrf": "^3.0.1",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "pg": "^8.11.3",
-    "pino": "^8.15.6",
-    "pino-http": "^8.5.0"
+    "cookie-parser": "1.4.6",
+    "cors": "2.8.5",
+    "csrf-csrf": "3.0.1",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "pg": "8.11.3",
+    "pino": "8.15.6",
+    "pino-http": "8.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1",
-    "pino-pretty": "^10.2.3",
-    "supertest": "^6.3.3"
+    "nodemon": "3.0.1",
+    "pino-pretty": "10.2.3",
+    "supertest": "6.3.3"
   }
 }
