--- a/examples/tutorials/todo-completed/package.json
+++ b/examples/tutorials/todo-completed/package.json
@@ -18,7 +18,7 @@
     "multiformats": "10.0.2",
     "uuid": "9.0.0",
     "varint": "6.0.0",
-    "vue": "^3.2.41",
+    "vue": "3.2.41",
     "vue-toastification": "2.0.0-rc.5",
     "@web5/api": "0.8.2"
   },
@@ -35,7 +35,7 @@
     "rollup-plugin-polyfill-node": "0.12.0",
     "tailwindcss": "3.2.4",
     "vite": "4.3.7",
-    "vite-plugin-node-stdlib-browser": "^0.2.1"
+    "vite-plugin-node-stdlib-browser": "0.2.1"
   },
   "browserslist": [
     "last 2 Chrome versions",
