--- a/examples/web5-quickstart-widgets/package.json
+++ b/examples/web5-quickstart-widgets/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@rollup/plugin-dynamic-import-vars": "^2.0.4",
-    "@rollup/plugin-node-resolve": "^13.0.6",
-    "express": "^4.18.2",
-    "rollup": "^2.61.1"
+    "@rollup/plugin-dynamic-import-vars": "2.0.4",
+    "@rollup/plugin-node-resolve": "13.0.6",
+    "express": "4.18.2",
+    "rollup": "2.61.1"
   }
 }
