--- a/site/package.json
+++ b/site/package.json
@@ -32,13 +32,13 @@
     "docusaurus-tailwindcss": "0.1.0",
     "dotenv": "16.3.1",
     "gh": "2.8.9",
-    "googleapis": "^128.0.0",
+    "googleapis": "128.0.0",
     "postcss": "8.4.21",
     "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.7",
-    "react-modal": "^3.16.1",
+    "react-modal": "3.16.1",
     "react-player": "2.11.2",
     "redocusaurus": "1.5.1",
     "stream-browserify": "3.0.0",
