--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "clear": "pnpm --filter site run clear",
     "test": "node extract-snippets && pnpm vitest run --config vite.config.ts && pnpm test:browser",
     "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch",
-    "test:browser": "pnpm -r test:browser"
+    "test:browser": "pnpm -r test:browser",
+    "test:versions": "node check-versions.js"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "googleapis": "^128.0.0",
     "@web5/api": "0.8.2",
     "font-awesome": "^4.7.0",
+    "googleapis": "^128.0.0",
     "node-fetch": "^3.3.2",
     "react-fontawesome": "^1.7.1",
     "react-markdown": "^8.0.7",
@@ -34,6 +35,8 @@
     "@vitest/browser": "0.33.0",
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
+    "glob": "^10.3.10",
+    "husky": "^8.0.3",
     "playwright": "^1.39.0",
     "start-server-and-test": "^2.0.2",
     "vitest": "0.33.0",
