configure node env for vitest

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "node extract-snippets && pnpm --filter site run build",
     "clear": "pnpm --filter site run clear",
-    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts && pnpm test:browser",
+    "test": "node extract-snippets && pnpm vitest run --config vite.config.ts && pnpm test:browser && pnpm test:node",
     "test:watch": "node extract-snippets && pnpm vitest --config vite.config.ts --watch",
-    "test:browser": "pnpm -r test:browser"
+    "test:browser": "pnpm -r test:browser",
+    "test:node": "pnpm -r test:node"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
