--- a/examples/tutorials/book-reviews/package.json
+++ b/examples/tutorials/book-reviews/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "book-reviews.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:node": "pnpm vitest run book-reviews --config ../../../vite-node.config.ts",
     "start": "node book-reviews.js"
   },
   "author": "",
