--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -22,7 +22,11 @@
   },
   "dependencies": {
     "@heroicons/vue": "1.0.6",
-    "@web5/api": "0.8.2"
+    "@nuxt/kit": "3.8.2",
+    "@nuxt/ui-templates": "1.3.1",
+    "@web5/api": "0.8.2",
+    "vue": "3.3.4",
+    "vue-router": "4.2.5"
   },
   "type": "module"
 }
