--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -11,6 +11,7 @@
     "test:browser": "start-server-and-test dev http://localhost:5176 test"
   },
   "devDependencies": {
+    "@nuxt/kit": "3.8.2",
     "@nuxt/test-utils": "3.6.5",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/forms": "0.5.3",
@@ -22,6 +23,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "1.0.6",
-    "@web5/api": "0.8.2"
+    "@nuxt/ui-templates": "1.3.1",
+    "@web5/api": "0.8.2",
+    "vue": "3.3.4",
+    "vue-router": "4.2.5"
   }
 }
