--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -3,10 +3,12 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 5175",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "playwright test",
+    "test:browser": "start-server-and-test dev http://localhost:5175 test"
   },
   "devDependencies": {
     "@nuxt/test-utils": "3.6.5",
@@ -20,7 +22,11 @@
   },
   "dependencies": {
     "@heroicons/vue": "1.0.6",
-    "@web5/api": "0.8.2"
+    "@nuxt/kit": "3.8.2",
+    "@nuxt/ui-templates": "1.3.1",
+    "@web5/api": "0.8.2",
+    "vue": "3.3.4",
+    "vue-router": "4.2.5"
   },
   "type": "module"
 }
