--- a/examples/tutorials/shared-todo-starter/package.json
+++ b/examples/tutorials/shared-todo-starter/package.json
@@ -3,12 +3,15 @@
   "private": true,
   "scripts": {
     "build": "nuxt build",
-    "dev": "nuxt dev",
+    "dev": "nuxt dev -p 5176",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "test": "playwright test",
+    "test:browser": "start-server-and-test dev http://localhost:5176 test"
   },
   "devDependencies": {
+    "@nuxt/kit": "3.8.2",
     "@nuxt/test-utils": "3.6.5",
     "@nuxtjs/tailwindcss": "6.8.0",
     "@tailwindcss/forms": "0.5.3",
@@ -20,6 +23,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "1.0.6",
-    "@web5/api": "0.8.2"
+    "@nuxt/ui-templates": "1.3.1",
+    "@web5/api": "0.8.2",
+    "vue": "3.3.4",
+    "vue-router": "4.2.5"
   }
 }
