removing range from husky itself

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@vitest/coverage-istanbul": "0.33.0",
     "fake-indexeddb": "4.0.2",
     "glob": "10.3.10",
-    "husky": "^8.0.3",
+    "husky": "8.0.3",
     "playwright": "1.39.0",
     "start-server-and-test": "2.0.2",
     "vitest": "0.33.0",
