--- a/examples/tutorials/todo-starter/package.json
+++ b/examples/tutorials/todo-starter/package.json
@@ -18,7 +18,7 @@
     "multiformats": "10.0.2",
     "uuid": "9.0.0",
     "varint": "6.0.0",
-    "vue": "3.3.4",
+    "vue": "^3.3.4",
     "vue-toastification": "2.0.0-rc.5",
     "@web5/api": "0.8.2"
   },
