--- a/examples/tutorials/book-reviews/package.json
+++ b/examples/tutorials/book-reviews/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@web5/api": "^0.8.2"
+    "@web5/api": "0.8.2"
   },
   "type": "module"
 }
