--- a/.github/ISSUE_TEMPLATE/web5-upgrade.yaml
+++ b/.github/ISSUE_TEMPLATE/web5-upgrade.yaml
@@ -12,10 +12,11 @@ body:
       label: Tasks
       description: Tasks to be completed in issuing a new Web5 release
       options:
-        - label: (Web5 Team) Cut preview/alpha release for acceptance testing     
-        - label: (Web5 Team) Run Web5 tests against [acceptance suite](https://github.com/TBD54566975/bundler-bonanza)
-        - label: (Open Source Programs Engineering) Create new branch on site repo for the upgrade
-        - label: (Open Source Programs Engineering) Open PR on this branch to activate Deploy Previews in Netlify
+        - label: (Web5 Team) Cut preview/alpha release for acceptance testing. Version: `versionNumberHere`. Link: here.
+        - label: (Web5 Team) Run Web5 tests against [acceptance suite](https://github.com/TBD54566975/bundler-bonanza). Link to branch with passing bundler-bonanza w/ upgraded Web5 dep:
+        - label: (Open Source Programs Engineering) Create new branch on site repo for the upgrade. Branch: Link here
+        - label: (Open Source Programs Engineering) This will trigger a Deploy Preview on Netlify. to activate Deploy Previews in Netlify. Deploy Preview: Link here
+        - label: (Open Source Programs Engineering) Open PR on this branch to activate Deploy Previews in Netlify. PR: Link here
         - label: (Open Source Programs Engineering) Update the Web5 version to the alpha release in site monorepo
         - label: (Open Source Programs Engineering) Run the monorepo tests - this will cover code snippets and examples
         - label: (Open Source Programs Engineering) Check results of tests
@@ -24,3 +25,4 @@ body:
         - label: (Open Source Programs Engineering) Update Web5 version in site to new Web5 version on branch
         - label: (Open Source Programs Engineering) The release of Web5 will trigger tbdocs automation and open a PR for that against the site. Merge that PR in the branch.
         - label: (Open Source Programs Engineering) Rebase and merge site to `main`, run tests, push upstream
+        - label: (Open Source Programs Engineering) Retrain AskGPT bot on new data
