--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "googleapis": "128.0.0",
     "@web5/api": "0.8.2",
     "font-awesome": "4.7.0",
+    "googleapis": "128.0.0",
     "node-fetch": "3.3.2",
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
@@ -38,7 +38,7 @@
     "glob": "10.3.10",
     "husky": "8.0.3",
     "playwright": "1.39.0",
-    "start-server-and-test": "2.0.2",
+    "start-server-and-test": "^2.0.3",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
