--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "glob": "10.3.10",
     "husky": "8.0.3",
     "playwright": "1.39.0",
-    "start-server-and-test": "^2.0.3",
+    "start-server-and-test": "2.0.2",
     "vitest": "0.33.0",
     "webdriverio": "8.13.13"
   }
