--- a/examples/tutorials/todo-completed/package.json
+++ b/examples/tutorials/todo-completed/package.json
@@ -20,7 +20,7 @@
     "varint": "6.0.0",
     "vue": "3.2.41",
     "vue-toastification": "2.0.0-rc.5",
-    "@web5/api": "0.8.2",
+    "@web5/api": "0.8.3-rc.0",
     "vue-router": "4.2.5"
   },
   "devDependencies": {
