--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@web5/api": "0.8.3-rc.0",
+    "@web5/api": "0.8.3",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
     "node-fetch": "3.3.2",
