CI trigger for main and conditionally preview

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     branches:
       - main
+  push:
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       reason:
@@ -32,13 +35,12 @@ jobs:
 
       - name: Install Playwright browsers
         run: pnpm playwright install --with-deps
+
       - name: Start dwn-server container
         run: docker-compose up -d dwn-server
 
       - name: Wait for dwn-server to be ready
         run: until curl -sf http://localhost:3000/health; do echo -n .; sleep .1; done
-      - name: Install Playwright browsers
-        run: pnpm playwright install --with-deps
 
       - name: Run tests
         run: pnpm test
@@ -50,6 +52,8 @@ jobs:
 
   deploy:
     needs: test
+    # Deploy the preview branch to Netlify only if it's a PR
+    if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
 
     steps:
