--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@web5/api": "0.8.3",
     "@web5/dids":"0.2.3",
+    "process": "0.11.10",
     "font-awesome": "4.7.0",
     "googleapis": "128.0.0",
     "node-fetch": "3.3.2",
