--- a/examples/tutorials/fan-club-credential/package.json
+++ b/examples/tutorials/fan-club-credential/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@web5/api": "^0.8.3",
     "@web5/credentials": "^0.4.0",
-    "@web5/dids": "^0.2.3"
+    "@web5/dids": "^0.2.3",
+    "@web5/user-agent": "^0.2.5"
   }
 }
