--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -25,6 +25,7 @@
     "@nuxt/kit": "3.8.2",
     "@nuxt/ui-templates": "1.3.1",
     "@web5/api": "0.8.3",
+    "vite-plugin-node-stdlib-browser": "0.2.1",
     "vue": "3.3.4",
     "vue-router": "4.2.5"
   },
