--- a/site/package.json
+++ b/site/package.json
@@ -25,6 +25,7 @@
     "@react-aria/utils": "3.17.0",
     "@react-stately/tooltip": "3.4.1",
     "@tailwindcss/typography": "0.5.9",
+    "@web5/crypto": "^0.2.4",
     "autoprefixer": "10.4.13",
     "buffer": "6.0.3",
     "clsx": "1.2.1",
