--- a/examples/tutorials/shared-todo-completed/package.json
+++ b/examples/tutorials/shared-todo-completed/package.json
@@ -24,7 +24,7 @@
     "@heroicons/vue": "1.0.6",
     "@nuxt/kit": "3.8.2",
     "@nuxt/ui-templates": "1.3.1",
-    "@web5/api": "0.8.3",
+    "@web5/api": "0.8.4-rc.0",
     "vite-plugin-node-stdlib-browser": "0.2.1",
     "vue": "3.3.4",
     "vue-router": "4.2.5"
