--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@fortawesome/fontawesome-svg-core": "6.4.2",
     "@fortawesome/free-solid-svg-icons": "6.4.2",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@web5/api": "0.8.4-rc.0",
+    "@web5/api": "0.8.4",
     "@web5/credentials": "0.4.1",
     "@web5/dids": "0.2.3",
     "font-awesome": "4.7.0",
