--- a/examples/tutorials/fan-club-credential/package.json
+++ b/examples/tutorials/fan-club-credential/package.json
@@ -12,8 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "@web5/api": "0.8.4",
-    "@web5/credentials": "^0.4.1",
-    "@web5/dids": "^0.2.4",
+    "@web5/credentials": "0.4.1",
+    "@web5/dids": "0.2.4",
     "@web5/user-agent": "^0.2.5"
   }
 }
