--- a/site/package.json
+++ b/site/package.json
@@ -37,6 +37,7 @@
     "postcss": "8.4.31",
     "prism-react-renderer": "1.3.5",
     "process": "0.11.10",
+    "raw-loader": "4.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-markdown": "8.0.7",
