--- a/shnippet.config.json
+++ b/shnippet.config.json
@@ -1,7 +1,7 @@
 {
     "rootDirectory": "./site/__tests__",
     "outputDirectory": "./site/snippets",
-    "fileExtensions": [".js", ".ts", ".kt"],
+    "fileExtensions": [".js", ".ts", ".kt", ".bash", ".gradle", ".xml"],
     "snippetTags": {
       "start": ":snippet-start:",
       "end": ":snippet-end:"
