--- a/site/__tests__/tbdex/wallet/required-sdks.gradle
+++ b/site/__tests__/tbdex/wallet/required-sdks.gradle
@@ -1,4 +1,4 @@
-// :snippet-start: installKt
+// :snippet-start: walletSdkInstallGradle
 repositories {
     mavenCentral()
     maven("https://jitpack.io")
