--- a/site/testsuites/testsuite-rust/Cargo.toml
+++ b/site/testsuites/testsuite-rust/Cargo.toml
@@ -2,6 +2,7 @@
 name = "testsuite-rust"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.75"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
