Issue #1197 - Add tbdex-kt dependencies to Kotlin TestSuite
With a WHOLE LOT of Dark Arts Evil Nonsense to make it work:

* SNAPSHOT dependency
* Addition of a SNAPSHOTs repo
* dependencyManagement to force version resolution

This may unblock us temporarily but will not work sustainably. The SNAPSHOT dependency will go away and due to version changes from upstream projects the dependencyManagement guards will need to be updated with them.

--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -25,12 +25,19 @@
         These need to be uniformly updated as part of the
         single dependency script from Nick
         -->
-        <version.tbdex>0.8.0-beta</version.tbdex>
-        <version.web5>0.10.0</version.web5>
+        <version.tbdex>0.9.0-SNAPSHOT</version.tbdex>
+
+        <!-- ALR Dark Arts to Make tbDEX and Web5 Play Nice -->
+        <!--
+        Will eventually go bye-bye once the
+        underlying dep trees are fixed up
+        -->
+        <version.com.fasterxml.jackson.core>2.9.8</version.com.fasterxml.jackson.core>
     </properties>
 
     <dependencyManagement>
         <dependencies>
+            <!-- External Dependencies -->
             <dependency>
                 <groupId>org.assertj</groupId>
                 <artifactId>assertj-core</artifactId>
@@ -71,36 +78,21 @@
               <artifactId>tbdex-protocol</artifactId>
               <version>${version.tbdex}</version>
             </dependency>
+
+            <!-- ALR Dark Arts to Make tbDEX and Web5 Play Nice -->
+            <!--
+            Will eventually go bye-bye once the
+            underlying dep trees are fixed up
+            -->
             <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5</artifactId>
-                <version>${version.web5}</version>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-core</artifactId>
+              <version>${version.com.fasterxml.jackson.core}</version>
             </dependency>
             <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5-common</artifactId>
-                <version>${version.web5}</version>
-            </dependency>
-            <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5-credentials</artifactId>
-                <version>${version.web5}</version>
-            </dependency>
-            <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5-crypto</artifactId>
-                <version>${version.web5}</version>
-            </dependency>
-            <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5-dids</artifactId>
-                <version>${version.web5}</version>
-            </dependency>
-            <dependency>
-                <groupId>xyz.block</groupId>
-                <artifactId>web5-testing</artifactId>
-                <version>${version.web5}</version>
-                <scope>test</scope>
+              <groupId>com.fasterxml.jackson.core</groupId>
+              <artifactId>jackson-databind</artifactId>
+              <version>${version.com.fasterxml.jackson.core}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -135,30 +127,6 @@
         <dependency>
           <groupId>xyz.block</groupId>
           <artifactId>tbdex-protocol</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5-common</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5-credentials</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5-crypto</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5-dids</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>xyz.block</groupId>
-            <artifactId>web5-testing</artifactId>
         </dependency>
     </dependencies>
 
@@ -241,5 +209,11 @@
             <name>jboss</name>
             <url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases/</url>
         </repository>
+      <repository>
+        <id>sonatype-oss-snapshots</id>
+        <name>sonatype-oss-snapshots</name>
+        <url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
+        <snapshots />
+      </repository>
     </repositories>
 </project>
