Add Kotlin Snippets to PFI/Structuring a PFI App  (#1181)
* Use shnip system, still need code snippets for some parts of exchanges and offerings apis pending convo with Jiyoon

* add all snippets

* Update snippet names and use Shnip system

* fixing code

* add Kotlin code snippets

* update js server name

* update tests to run out of new testsuites directories

* renaming kotlin test file

* Update Kotlin code

* Use shnip system, still need code snippets for some parts of exchanges and offerings apis pending convo with Jiyoon

* add all snippets

* Update snippet names and use Shnip system

* fixing code

* add Kotlin code snippets

* update js server name

* update tests to run out of new testsuites directories

* renaming kotlin test file

* Update Kotlin code

* Make io.ktor.server available on the classpath

* Try to fix Kotlin compilation errors

* try to fix build

* conforming title to the rest of the guides on the site

* pushing up some changes, still addressing comments

* separate out Kotlin classes

* fix build issue with package names

* fix build

* update PFI did creation, sync names of sever var

* Apply suggestions from code review

Apply suggestions

Co-authored-by: Angie Jones <jones.angie@gmail.com>

* add imports

* removing dup imports

---------

Co-authored-by: Angie Jones <jones.angie@gmail.com>
Co-authored-by: Andrew Lee Rubinger <alr@alrubinger.com>

--- a/site/testsuites/testsuite-kotlin/pom.xml
+++ b/site/testsuites/testsuite-kotlin/pom.xml
@@ -27,6 +27,9 @@
         -->
         <version.tbdex>0.9.0-beta</version.tbdex>
 
+        <!-- Test Dependencies -->
+        <version.ktor>2.3.7</version.ktor>
+
         <!-- ALR Dark Arts to Make tbDEX and Web5 Play Nice -->
         <!--
         Will eventually go bye-bye once the
@@ -79,6 +82,14 @@
               <version>${version.tbdex}</version>
             </dependency>
 
+            <!-- Test Dependencies -->
+            <dependency>
+              <groupId>io.ktor</groupId>
+              <artifactId>ktor-server-netty-jvm</artifactId>
+              <version>${version.ktor}</version>
+              <scope>test</scope>
+            </dependency>
+
             <!-- ALR Dark Arts to Make tbDEX and Web5 Play Nice -->
             <!--
             Will eventually go bye-bye once the
@@ -127,6 +138,12 @@
         <dependency>
           <groupId>xyz.block</groupId>
           <artifactId>tbdex-protocol</artifactId>
+        </dependency>
+
+        <!-- Test Dependencies -->
+        <dependency>
+          <groupId>io.ktor</groupId>
+          <artifactId>ktor-server-netty-jvm</artifactId>
         </dependency>
     </dependencies>
 
