--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "playwright": "1.39.0",
     "start-server-and-test": "2.0.2",
     "vitest": "0.33.0",
-    "webdriverio": "8.13.13"
+    "webdriverio": "8.13.13",
+    "rimraf": "5.0.5"
   }
 }
