--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:kotlin": "./site/testsuites/testsuite-kotlin/mvnw clean verify -f site/testsuites/testsuite-kotlin",
     "test:swift": "swift test --package-path ./site/testsuites/testsuite-swift",
     "test:rust": "cd ./site/testsuites/testsuite-rust && cargo test",
-    "shnip": "node ./shnippet/src/cli"
+    "shnip": "node ./shnippet/src/cli --structure match && node ./shnippet/src/cli --structure byLanguage"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "6.4.2",
@@ -54,6 +54,7 @@
     "playwright": "1.39.0",
     "start-server-and-test": "2.0.2",
     "vitest": "0.33.0",
-    "webdriverio": "8.13.13"
+    "webdriverio": "8.13.13",
+    "rimraf": "5.0.5"
   }
 }
