Snippets for tbDEX Credential Issuance Guide (#1254)
* js update & test

* addressing comments

* kotlin test & ktor instructions

* added .verify() test

* fixing tests and reconciling dependencies

* removing embedded snippets

* adding comments + 2methods back

* removing pnpm.lock.yaml

* pnpm update

---------

Co-authored-by: angiejones <jones.angie@gmail.com>
Co-authored-by: Adewale Abati <acekyd01@gmail.com>

--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-fontawesome": "1.7.1",
     "react-markdown": "8.0.7",
     "react-slick": "0.29.0",
-    "slick-carousel": "1.8.1"
+    "slick-carousel": "1.8.1",
+    "express": "4.18.2"
   },
   "devDependencies": {
     "@vitest/browser": "0.33.0",
