support prepend tag

--- a/shnippet.config.json
+++ b/shnippet.config.json
@@ -5,7 +5,9 @@
   "exclude": ["pfiOverviewReadOfferingsJs", "pfiOverviewWriteJs", "pfiOverviewWriteOfferingsJs"],
   "snippetTags": {
     "start": ":snippet-start:",
-    "end": ":snippet-end:"
+    "end": ":snippet-end:",
+    "prependStart": ":prepend-start:",
+    "prependEnd": ":prepend-end:"
   },
   "outputDirectoryStructure": "byLanguage"
 }
