--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "start:widget": "pnpm --filter web5-quickstart-widgets start",
     "build": "pnpm run shnip && pnpm --filter site run build",
     "clear": "pnpm --filter site run clear",
-    "test": "pnpm run shnip && pnpm vitest run --config vite.config.ts --no-threads && pnpm test:kotlin && pnpm test:swift && pnpm test:browser",
-    "test:watch": "pnpm run shnip && pnpm vitest --config vite.config.ts --watch",
+    "test": "pnpm test:js && pnpm test:kotlin && pnpm test:swift && pnpm test:browser",
+    "test:apps": "pnpm --filter feedback-server test run",
     "test:browser": "pnpm -r test:browser",
-    "test:versions": "node check-versions.js",
-    "test:js": "pnpm run shnip && pnpm vitest run --config vite.config.ts --no-threads",
-    "test:kotlin": "./site/testsuites/testsuite-kotlin/mvnw clean verify -f site/testsuites/testsuite-kotlin",
-    "test:swift": "swift test --package-path ./site/testsuites/testsuite-swift",
+    "test:js": "pnpm vitest run --config vite.config.ts --no-threads",
+    "test:kotlin": "./site/testsuites/testsuite-kotlin/mvnw clean verify -f site/testsuites/testsuite-kotlin --batch-mode",
     "test:rust": "cd ./site/testsuites/testsuite-rust && cargo test",
+    "test:swift": "swift test --package-path ./site/testsuites/testsuite-swift",
+    "test:versions": "node check-versions.js",
+    "test:watch": "pnpm run shnip && pnpm vitest --config vite.config.ts --watch",
     "shnip": "node ./shnippet/src/cli --structure match && node ./shnippet/src/cli --structure byLanguage"
   },
   "dependencies": {
